remove zenodo doi

--- a/documentation/saqi.html
+++ b/documentation/saqi.html
@@ -379,7 +379,7 @@
         <dd>XXXXXXXXX, XXXXXX XXXXXXXXX, and XXXXXXX XXXXXXXXX <a href="https://www.XXXXX.XX.XX/">XXXX</a></dd>
         </dt>
         <dt>Resource type:Ontology, Knowledge Graph, SAQI Application</dt>
-        <dt>DOI : <a href="https://dx.doi.org/10.5281/zenodo.XXXXXXX">dx.doi.org/10.5281/zenodo.7448007</a></dt>
+        <dt>DOI : <a href="https://dx.doi.org/10.5281/zenodo.XXXXXXX">dx.doi.org/10.5281/zenodo.XXXXXXX</a></dt>
         <dt>URL : <a href="https://github.com/XXXX/XX-XXXXXXXX-XXXXXXX">github.com/XXXX/XX-XXXXXXXX-XXXXXXX</a>
         </dt>
       </div>
